# minglemap

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CODEOWNERS  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  GOVERNANCE.md  LICENSE  Makefile  PLANS.md  README.md  ROADMAP.docx  ROADMAP.md  SECURITY.md  TODO.md  docker-compose.override.yml  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: compose.dev.yml  devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
apps/core/: admin.py  models.py  serializers.py  tests.py  views.py
apps/core/fixtures/: seed-phase1.json  seed.json
apps/core/management/commands/: seed.py
apps/core/migrations/: 0001_initial.py  0002_remove_profile_consent_level_and_more.py  0003_attendance_visible_in_directory.py  0004_alter_attendance_visible_in_directory.py  0005_feedback.py
docs/: MingleMap Application Ideation Privacy Enhancement.md  MingleMap Application Ideation,md  MingleMap_Application_Ideation.md  MingleMap_Application_Ideation_Privacy_Enhancement.md  PRD - Attendee Experience  analytics-telemetry-plan.md  api-contracts.md  conf.py  event-signup-directory-wireframes.md  index.rst  phase1-success-metrics.md  seed-data.md
frontend/: README.md  design-tokens.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/styles/: tokens.css
frontend/src/utils/: figma.ts
minglemap/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: apply-figma-tokens.ts
src/minglemap/: __main__.py
