# pyproject.toml 
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minglemap"
version = "0.0.1"
description = "Smarter, friendlier in-person networking."
authors = [
  { name = "Ted Kihm", email = "ted@euphemystic.com" }
]
requires-python = ">=3.10"
readme = "README.md"
license = { file = "LICENSE" }

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["minglemap"]

# ——— Add this CLI entry-point ———
[project.scripts]
minglemap = "minglemap.__main__:main"

[project.optional-dependencies]
dev = ["pytest", "pre-commit"]
