[project]
name = "minglemap"
version = "0.1.0"
description = "MingleMap – Django + Channels + PostGIS"

# ── ►  Runtime requirements ◄ ──
dependencies = [
  "django~=5.0",
  "daphne~=4.1",           # ASGI server for Channels
  "channels~=4.0",
  "channels-redis~=4.2",   # channel layer backed by Redis
  "psycopg[binary]~=3.1",  # Postgres driver
  "pillow~=10.0",          # image/file uploads (optional but common)
  "whitenoise~=6.6",       # static-file serving in prod
  "djangorestframework~=3.15",  # REST API framework
]

# ── ►  Optional “extras” for contributors ◄ ──
[project.optional-dependencies]
test = [
  "pytest~=8.2",
  "pytest-django~=4.8",
]
typecheck = [
  "mypy~=1.10",
]

# ── Ruff configuration ──
[tool.ruff]
target-version = "py312"          # match the Python you use in Docker
line-length = 88
src = ["minglemap", "apps"]       # adjust if your code lives elsewhere
[tool.ruff.lint]
exclude = [
  ".venv",
  "venv",
  "migrations",
  "static",
]
extend-select = [
  # Everything you used to get from Flake8 + Black + isort
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "B",   # bugbear
  "I",   # isort-style import order
  "UP",  # pyupgrade
  "C4",  # comprehensions
  "N",   # pep8-naming
  "Q",   # quote consistency
]

[tool.ruff.format]
# Ruff-format replaces Black
quote-style = "preserve"         # keep existing quoting
indent-style = "space"
